Add navigation tabs to main performance page

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -12,7 +12,13 @@
         <!-- Header -->
         <header>
             <h1>Goldilocks <span>V2</span> Performance</h1>
-            <span class="last-updated" id="lastUpdated">Loading...</span>
+            <div style="display: flex; align-items: center; gap: 16px;">
+                <nav class="nav-tabs">
+                    <a href="/" class="nav-tab active">Performance</a>
+                    <a href="/live" class="nav-tab">Live</a>
+                </nav>
+                <span class="last-updated" id="lastUpdated">Loading...</span>
+            </div>
         </header>
 
         <!-- Summary Cards -->
