Add Today's Bets page with tier grouping

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -17,6 +17,7 @@
                 <nav class="nav-tabs">
                     <a href="/" class="nav-tab active">Performance</a>
                     <a href="/live" class="nav-tab">Live</a>
+                    <a href="/bets" class="nav-tab">Today's Bets</a>
                 </nav>
                 <span class="last-updated" id="lastUpdated">Loading...</span>
             </div>
