--- a/app/static/live.html
+++ b/app/static/live.html
@@ -15,6 +15,7 @@
             <nav class="nav-tabs">
                 <a href="/" class="nav-tab">Performance</a>
                 <a href="/live" class="nav-tab active">Live</a>
+                <a href="/bets" class="nav-tab">Today's Bets</a>
             </nav>
         </header>
 
