--- a/app/static/bets.html
+++ b/app/static/bets.html
@@ -53,9 +53,12 @@
             letter-spacing: 0.05em;
         }
 
-        .game-section {
+        .games-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(380px, 1fr));
+            gap: 1rem;
+            max-width: 1400px;
             margin: 1.5rem auto;
-            max-width: 900px;
             padding: 0 1rem;
         }
 
@@ -63,7 +66,6 @@
             background: var(--card-bg);
             border: 1px solid var(--border);
             border-radius: 12px;
-            margin-bottom: 1rem;
             overflow: hidden;
         }
 
@@ -72,85 +74,110 @@
             justify-content: space-between;
             align-items: center;
             padding: 1rem 1.25rem;
-            background: rgba(255, 255, 255, 0.02);
+            background: linear-gradient(135deg, rgba(255,255,255,0.03) 0%, rgba(255,255,255,0.01) 100%);
             border-bottom: 1px solid var(--border);
         }
 
         .matchup {
             display: flex;
             align-items: center;
-            gap: 0.75rem;
-        }
-
-        .team {
-            font-weight: 600;
-            font-size: 1rem;
+            gap: 0.5rem;
+            font-weight: 700;
+            font-size: 1.1rem;
         }
 
         .team-away {
             color: var(--text-secondary);
         }
 
-        .team-home {
-            color: var(--text-primary);
-        }
-
         .at-symbol {
             color: var(--text-muted);
             font-size: 0.85rem;
+            font-weight: 400;
         }
 
-        .game-time {
-            font-size: 0.85rem;
-            color: var(--text-secondary);
+        .team-home {
+            color: #60a5fa;
         }
 
-        .bets-list {
+        .bet-count {
+            background: rgba(245, 158, 11, 0.15);
+            color: #f59e0b;
+            padding: 0.25rem 0.6rem;
+            border-radius: 12px;
+            font-size: 0.75rem;
+            font-weight: 600;
+        }
+
+        .players-list {
             padding: 0.5rem 0;
         }
 
-        .bet-row {
+        .player-row {
             display: grid;
             grid-template-columns: 1fr auto auto auto;
-            gap: 1rem;
+            gap: 0.75rem;
             align-items: center;
-            padding: 0.875rem 1.25rem;
+            padding: 0.75rem 1.25rem;
             border-bottom: 1px solid var(--border-subtle);
+            transition: background 0.15s ease;
         }
 
-        .bet-row:last-child {
+        .player-row:last-child {
             border-bottom: none;
+        }
+
+        .player-row:hover {
+            background: rgba(255, 255, 255, 0.02);
         }
 
         .player-info {
             display: flex;
             flex-direction: column;
-            gap: 0.25rem;
+            gap: 0.15rem;
+            min-width: 0;
         }
 
         .player-name {
             font-weight: 600;
             color: var(--text-primary);
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
 
-        .player-team {
+        .player-meta {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
             font-size: 0.75rem;
             color: var(--text-secondary);
         }
 
+        .team-badge {
+            background: rgba(96, 165, 250, 0.15);
+            color: #60a5fa;
+            padding: 0.1rem 0.4rem;
+            border-radius: 4px;
+            font-weight: 600;
+            font-size: 0.65rem;
+        }
+
         .bet-line {
             text-align: center;
+            min-width: 50px;
         }
 
         .line-value {
             font-size: 1.1rem;
             font-weight: 700;
             color: var(--text-primary);
+            font-variant-numeric: tabular-nums;
         }
 
         .line-label {
-            font-size: 0.7rem;
-            color: var(--text-secondary);
+            font-size: 0.6rem;
+            color: var(--text-muted);
             text-transform: uppercase;
         }
 
@@ -158,11 +185,11 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            padding: 0.375rem 0.75rem;
+            padding: 0.35rem 0.65rem;
             border-radius: 6px;
             font-weight: 600;
-            font-size: 0.85rem;
-            min-width: 70px;
+            font-size: 0.8rem;
+            min-width: 60px;
         }
 
         .direction-over {
@@ -179,13 +206,14 @@
             display: flex;
             flex-direction: column;
             align-items: flex-end;
-            gap: 0.25rem;
+            gap: 0.2rem;
+            min-width: 65px;
         }
 
         .tier-badge {
-            padding: 0.25rem 0.5rem;
+            padding: 0.2rem 0.45rem;
             border-radius: 4px;
-            font-size: 0.7rem;
+            font-size: 0.65rem;
             font-weight: 600;
             text-transform: uppercase;
         }
@@ -200,25 +228,17 @@
             color: #8b5cf6;
         }
 
-        .tier-prob-sweet-spot {
-            background: rgba(59, 130, 246, 0.15);
-            color: #3b82f6;
-        }
-
-        .tier-std-sweet-spot {
-            background: rgba(236, 72, 153, 0.15);
-            color: #ec4899;
-        }
-
         .units {
-            font-size: 0.75rem;
+            font-size: 0.7rem;
             color: var(--text-secondary);
+            font-variant-numeric: tabular-nums;
         }
 
         .no-bets {
             text-align: center;
             padding: 3rem;
             color: var(--text-secondary);
+            grid-column: 1 / -1;
         }
 
         .no-bets-icon {
@@ -227,25 +247,28 @@
             opacity: 0.5;
         }
 
-        .probability {
-            font-size: 0.75rem;
+        .loading {
+            text-align: center;
+            padding: 3rem;
             color: var(--text-secondary);
+            grid-column: 1 / -1;
         }
 
-        @media (max-width: 600px) {
-            .bet-row {
-                grid-template-columns: 1fr auto;
-                gap: 0.5rem;
+        @media (max-width: 500px) {
+            .games-grid {
+                grid-template-columns: 1fr;
             }
 
-            .bet-line, .bet-tier {
+            .player-row {
+                grid-template-columns: 1fr auto auto;
+            }
+
+            .bet-tier {
                 display: none;
             }
 
-            .player-info::after {
-                content: attr(data-line);
-                font-size: 0.8rem;
-                color: var(--text-secondary);
+            .matchup {
+                font-size: 1rem;
             }
         }
     </style>
@@ -279,7 +302,7 @@
             </div>
         </div>
 
-        <div class="game-section" id="gamesContainer">
+        <div class="games-grid" id="gamesContainer">
             <div class="loading">Loading today's bets...</div>
         </div>
     </main>
