--- a/app/static/bets.html
+++ b/app/static/bets.html
@@ -241,6 +241,23 @@
             grid-column: 1 / -1;
         }
 
+        .upcoming-card {
+            border-color: rgba(245, 158, 11, 0.3);
+            background: rgba(245, 158, 11, 0.03);
+        }
+
+        .upcoming-card .game-header {
+            background: rgba(245, 158, 11, 0.1);
+        }
+
+        .upcoming-note {
+            padding: 0.5rem 1.25rem;
+            font-size: 0.75rem;
+            color: #f59e0b;
+            background: rgba(245, 158, 11, 0.1);
+            border-bottom: 1px solid var(--border);
+        }
+
         .no-bets-icon {
             font-size: 3rem;
             margin-bottom: 1rem;
