--- a/app/static/bets.html
+++ b/app/static/bets.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Today's Bets | Goldilocks V2</title>
     <link rel="icon" type="image/svg+xml" href="/static/favicon.svg">
-    <link rel="stylesheet" href="/static/styles.css">
+    <link rel="stylesheet" href="/static/styles.css?v=2">
     <style>
         .bets-header {
             text-align: center;
@@ -306,6 +306,6 @@
         </div>
     </main>
 
-    <script src="/static/bets.js"></script>
+    <script src="/static/bets.js?v=2"></script>
 </body>
 </html>
